<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>edu.stanford.protege</groupId>
	<artifactId>webprotege-forms</artifactId>
	<version>1.1.3</version>
	<name>webprotege-forms</name>
	<description>Data structures and request/responses for forms</description>
	<properties>
		<java.version>16</java.version>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>webprotege-common</artifactId>
			<version>0.9.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>29.0-jre</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-api</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>webprotege-entity-data</artifactId>
			<version>0.9.3</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>webprotege-jackson</artifactId>
			<version>0.9.2</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>webprotege-entity-frames</artifactId>
			<version>0.9.2</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>webprotege-criteria</artifactId>
			<version>0.9.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-json</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-impl</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
			<groupId>com.google.auto.value</groupId>
			<artifactId>auto-value</artifactId>
			<version>1.8.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.google.auto.value</groupId>
			<artifactId>auto-value-annotations</artifactId>
			<version>1.8.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<doclint>none</doclint>
							<release>16</release>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
						<dependencies>
							<!--
                              TODO:
                                Remove after OSSRH-66257, NEXUS-26993 are fixed,
                                possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
                            -->
							<dependency>
								<groupId>com.thoughtworks.xstream</groupId>
								<artifactId>xstream</artifactId>
								<version>1.4.15</version>
							</dependency>
						</dependencies>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>

</project>
